adicionando pages e modificando icons

--- a/Contact.htm
+++ b/Contact.htm
@@ -5,9 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Contato</title>
 </head>
 <body>
-    
+    <section class="contact">
+    <div class="contato">
+        <h1>
+            Nossos Contatos
+        </h1>
+        <div class="img-text">
+        <img src="img/WhatsApp Image 2023-07-05 at 4.12.57 PM (1).jpeg" alt="logo">
+    </div>
+    </div>
+</section>
+<footer class="link">
+    <div class="botoes">
+        <img src="img/icons8-whatsapp.svg"><br><br>
+        <a href="https://api.whatsapp.com/send?phone=558186231837&text=Olá, quero fazer um pedido!" class="whatsapp-link">Entrar em contato via WhatsApp</a><br><br>
+        <img src="img/icons8-instagram.svg"><br><br>
+        <a href="https://www.instagram.com/delliciasdamarii/">Nosso Instagram</a>
+        
+    </div>
+</footer>
 </body>
 </html>
