--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
     <img src="img/WhatsApp Image 2023-07-05 at 4.12.56 PM (2).jpeg" alt="Produto 2">
     <div class="descricao">
       <h3>Brigadeiros e Surpresa de Uvas</h3>
-      <p>Brigadeiros feitos com leite condesado e e Surpresa de Uvas com tararm .</p>
+      <p>Brigadeiros feitos com leite condesado e cacau 50%. Suspresa de uvas com leite condesado</p>
     </div>
   </div>
 
