--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                     <nav class="navigation">
                         <a href="#" class="logo">D<span>elici</span>A<span>Da</span>M<span>ar</span>I</a>
                         <ul class="nav-menu">
-                            <li class="nav-item"><a href="home.html">Home</a></li>
+                            <li class="nav-item"><a href="home.html">Produtos</a></li>
                             <li class="nav-item"><a href="about.html">Sobre Nós</a></li>
                             <li class="nav-item"><a href="Contact.htm">Contatos</a></li>
                         </ul>
@@ -28,8 +28,8 @@
                     <section class="home">
                         <div class="home-text">
                             <h4 class="text-h4">Seja Bem Vindo Ao Delícias da Mari</h4>
-                            <h1 class="text-h1">Different spice for different tastes</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod error veniam in voluptatem magni quisquam</p>
+                            <h1 class="text-h1">Proporcionamos </h1>
+                            <p>à você experiências deliciosas</p>
                             <a href="home.html" class="home-btn">Nossos Produos</a>
                         </div>
                         <div class="home-img">
