--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <body>
                 <header>
                     <nav class="navigation">
-                        <a href="#" class="logo">D<span>elici</span>A<span>Da</span>M<span>ar</span>I</a>
+                        <a href="#" class="logo">D<span>elicia</span>S<span>Da</span>M<span>ar</span>I</a>
                         <ul class="nav-menu">
                             <li class="nav-item"><a href="home.html">Produtos</a></li>
                             <li class="nav-item"><a href="about.html">Sobre Nós</a></li>
@@ -30,7 +30,7 @@
                             <h4 class="text-h4">Seja Bem Vindo Ao Delícias da Mari</h4>
                             <h1 class="text-h1">Proporcionamos </h1>
                             <p>à você experiências deliciosas</p>
-                            <a href="home.html" class="home-btn">Nossos Produos</a>
+                            <a href="home.html" class="home-btn">Nossos Produtos</a>
                         </div>
                         <div class="home-img">
                             <img src="img/WhatsApp Image 2023-07-05 at 4.12.57 PM (1).jpeg" alt="hamburguer">
