--- a/home.html
+++ b/home.html
@@ -52,13 +52,8 @@
       <h3>Cardápio de Salgados</h3>
     </div>
   </div>
-
-  <!-- <button onclick="voltar()">Voltar</button> -->
-
-  <!-- <script>
-    function voltar() {
-      window.history.back();
-    }
-  </script> -->
+  <div class="pedido-text">  <a href="https://api.whatsapp.com/send?phone=558186231837&text=Olá, quero fazer um pedido!" class="home-btn">Fazer pedido</a>
+  </div>
+  </script>
 </body>
 </html>
