--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <div class="home-text">
                             <h4 class="text-h4">Seja Bem Vindo Ao Delícias da Mari</h4>
                             <h1 class="text-h1">Proporcionamos </h1>
-                            <p>à você experiências deliciosas</p>
+                            <p>à você experiências deliciosas.</p>
                             <a href="home.html" class="home-btn">Nossos Produtos</a>
                         </div>
                         <div class="home-img">
