--- a/Contact.htm
+++ b/Contact.htm
@@ -21,10 +21,10 @@
 <footer class="link">
     <div class="botoes">
         <img src="img/icons8-whatsapp.svg"><br><br>
-        <a href="https://api.whatsapp.com/send?phone=558186231837&text=Olá, quero fazer um pedido!" class="whatsapp-link">Entrar em contato via WhatsApp</a><br><br>
-        <img src="img/icons8-instagram.svg"><br><br>
-        <a href="https://www.instagram.com/delliciasdamarii/">Nosso Instagram</a>
-        
+        <a href="https://api.whatsapp.com/send?phone=558186231837&text=Olá, quero fazer um pedido!" class="home-btn">Nosso WhatsApp</a>
+        <img src="img/icons8-instagram.svg"><br><br>   
+        <a href="https://www.instagram.com/delliciasdamarii/" class="home-btn">Nosso Instagram</a>  
+               
     </div>
 </footer>
 </body>
